# C-

./: CMakeLists.txt
builds/: CMakeCache.txt  Makefile  MyProject  cmake_install.cmake
src/: main.cpp
src/controllers/: ClienteController.cpp  ClienteController.h  EmpleadoController.cpp  EmpleadoController.h  FacturaController.cpp  FacturaController.h  MarcaController.cpp  MarcaController.h  PersonaController.h  ProductoController.cpp  ProductoController.h  ProveedorController.cpp  ProveedorController.h  ReporteController.cpp  ReporteController.h  StockController.cpp  StockController.h
src/models/: Cliente.cpp  Cliente.h  DetalleFactura.cpp  DetalleFactura.h  Empleado.cpp  Empleado.h  Factura.cpp  Factura.h  FacturaCompra.h  FacturaVenta.h  Marca.cpp  Marca.h  Persona.cpp  Persona.h  Producto.cpp  Producto.h  Proveedor.cpp  Proveedor.h  Stock.cpp  Stock.h
src/utils/: IDGenerator.cpp  IDGenerator.h  Utils.h  Validator.cpp  Validator.h
src/views/: ClienteView.cpp  ClienteView.h  EmpleadoView.cpp  EmpleadoView.h  FacturaView.cpp  FacturaView.h  MarcaView.cpp  MarcaView.h  ProductoView.cpp  ProductoView.h  ProveedorView.cpp  ProveedorView.h  ReporteView.cpp  ReporteView.h  StockView.cpp  StockView.h
